css: fix a popup layout issue

--- a/css/Qgis2threejs.css
+++ b/css/Qgis2threejs.css
@@ -197,6 +197,7 @@ body {
 
 #popupbody {
   padding: 0px 5px 5px;
+  min-width: 290px;
   max-height: 500px;
   overflow: auto;
 }
